Updated NetisHR files

--- a/netishr/administrator.html
+++ b/netishr/administrator.html
@@ -424,6 +424,10 @@
                                         <div><a href="administrator_general_users.html">Users Management</a>
                                             <div class="small">Manage roles and system users</div>
                                         </div>
+                                        <p></p>
+                                        <div><a href="option_data_type_configuration.html">Option Data Type Configuration</a>
+                                            <div class="small">Configure Option data type across application</div>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="ibox float-e-margins">
@@ -452,7 +456,11 @@
                                     </div>
                                     <div class="ibox-content">
                                         <div><a href="administrator_job_settings.html">Settings</a>
-                                            <div class="small">Various settings for Performance</div>
+                                            <div class="small">Various settings for Job</div>
+                                        </div>
+                                        <p></p>
+                                        <div><a href="administrator_job_wla.html">Workload Analysis</a>
+                                            <div class="small">Settings for workload analysis</div>
                                         </div>
                                     </div>
                                 </div>
@@ -463,7 +471,8 @@
                                         </div>
                                     </div>
                                     <div class="ibox-content">
-                                        Upload Persons
+                                        <a href="person_information_settings.html">Persons Information Setting</a>
+                                        <div class="small">Information configuration for person information</div>
                                     </div>
                                 </div>
                             </div>
@@ -530,70 +539,6 @@
                                         </div>
                                         Personnel Administration
                                         <br> Payroll
-                                    </div>
-
-                                </div>
-                                <!-- This system management menu items are for system administrator only -->
-                                <div class="ibox float-e-margins">
-                                    <div class="ibox-title">
-                                        <h5>System Management</h5>
-                                        <div class="ibox-tools">
-                                        </div>
-                                    </div>
-                                    <div class="ibox-content">
-                                        <div><a href="#">System Information</a>
-                                            <div class="small">Various system information</div>
-                                        </div>
-                                        <p></p>
-                                        <div><a href="#">System Settings</a>
-                                            <div class="small">Various system settings</div>
-                                        </div>
-                                        <p></p>
-                                        <div><a href="#">Master Data</a>
-                                            <div class="small">Master data management</div>
-                                        </div>
-                                        <p></p>
-                                        <div><a href="#">Site Management</a>
-                                            <div class="small">Managing sites on this system</div>
-                                        </div>
-                                        <p></p>
-                                        <div><a href="#">License Management</a>
-                                            <div class="small">Managing licenses on this system</div>
-                                        </div>
-                                    </div>
-
-                                </div>
-                                <!-- This site management menu items are for site administrator only -->
-                                <div class="ibox float-e-margins">
-                                    <div class="ibox-title">
-                                        <h5>Site Management</h5>
-                                        <div class="ibox-tools">
-                                        </div>
-                                    </div>
-                                    <div class="ibox-content">
-                                        <div><a href="#">Company Info</a>
-                                            <div class="small">Company Info</div>
-                                        </div>
-                                        <p></p>
-                                        <div><a href="#">Site Settings</a>
-                                            <div class="small">Site Settings</div>
-                                        </div>
-                                        <p></p>
-                                        <div><a href="#">Domain Mappings</a>
-                                            <div class="small">Domain Mappings</div>
-                                        </div>
-                                        <p></p>
-                                        <div><a href="#">Menu Design</a>
-                                            <div class="small">Menu Design</div>
-                                        </div>
-                                        <p></p>
-                                        <div><a href="#">Site Menu Assignment</a>
-                                            <div class="small">Site Menu Assignment</div>
-                                        </div>
-                                        <p></p>
-                                        <div><a href="#">Role Menu Assignment</a>
-                                            <div class="small">Role Menu Assignment</div>
-                                        </div>
                                     </div>
 
                                 </div>
@@ -1218,7 +1163,7 @@
 
         });
     </script>
-	<script src="js/w3data.js"></script>
+    <script src="js/w3data.js"></script>
 
 </body>
 
