--- a/netishr/performance_mgmt_periods.html
+++ b/netishr/performance_mgmt_periods.html
@@ -513,7 +513,7 @@
                                             </tbody>
                                         </table>
                                 
-                                                        <label>Final Evaluation Phases</label>
+                                                        <label>Final Evaluation Phase</label>
                                         <table>
                                             <tbody>
                                                 <tr>
@@ -697,7 +697,7 @@
                                             </tbody>
                                         </table>
                                 
-                                                        <label>Final Evaluation Phases</label>
+                                                        <label>Final Evaluation Phase</label>
                                         <table>
                                             <tbody>
                                                 <tr>
