--- a/netishr/persons_profile.html
+++ b/netishr/persons_profile.html
@@ -153,8 +153,11 @@
                         <li>
                             <a href="index.html">Home</a>
                         </li>
+                        <li>
+                            <a href="persons.html">Staff List</a>
+                        </li>                        
                         <li class="active">
-                            <strong>Staff's Profile</strong>
+                            <strong>Staff Profile</strong>
                         </li>
                     </ol>
                 </div>
@@ -182,7 +185,7 @@
 										Job Title : IT Developer
 									</h4>
 									<h4>
-										Job Sub Level : IT Team
+										Organization Unit : IT Team
 									</h4>
                                 </div>
                             </div>
@@ -208,61 +211,64 @@
 												<div class="form-group">
 													<label class="col-sm-2 control-label">Name</label>
 													<div class="col-sm-10">
-														<p class="form-control-static">Tono Kartono</p>
+														<p class="form-control-static"><a href="#" id="name" data-type="text" data-pk="1" data-title="Enter boss' name" class="editable editable-click">Tono Kartono</a></p>
 													</div>
 												</div>
 												<div class="form-group">
 													<label class="col-sm-2 control-label">Title</label>
 													<div class="col-sm-10">
-														<p class="form-control-static">Mr</p>
+														<p class="form-control-static"><a href="#" id="Title" data-type="select" data-pk="1" data-title="Enter Title" class="editable editable-click">Mr</a></p>
 													</div>
 												</div>
 												<div class="form-group">
 													<label class="col-sm-2 control-label">Gender</label>
 													<div class="col-sm-10">
-														<p class="form-control-static">Male</p>
+														<p class="form-control-static"><a href="#" id="Gender" data-type="select" data-pk="1" data-title="Enter Gender" class="editable editable-click">Male</a></p>
 													</div>
 												</div>
 												<div class="form-group">
 													<label class="col-sm-2 control-label">Religion</label>
 													<div class="col-sm-10">
-														<p class="form-control-static">Islam</p>
+														<p class="form-control-static"><a href="#" id="Religion" data-type="select" data-pk="1" data-title="Enter Religion" class="editable editable-click">Islam</a></p>
 													</div>
 												</div>
                                                 <div class="form-group">
 													<label class="col-sm-2 control-label">Country of Birth</label>
 													<div class="col-sm-10">
-														<p class="form-control-static">Indonesia</p>
+														<p class="form-control-static"><a href="#" id="Country" data-type="select" data-pk="1" data-title="Enter Country of Birth" class="editable editable-click">Indonesia</a></p>
 													</div>
 												</div>
                                                 <div class="form-group">
 													<label class="col-sm-2 control-label">City of Birth</label>
 													<div class="col-sm-10">
-														<p class="form-control-static">Medan</p>
+														<p class="form-control-static"><a href="#" id="City" data-type="text" data-pk="1" data-title="Enter City" class="editable editable-click">DKI Jakarta</a></p>
 													</div>
 												</div>
                                                 <div class="form-group">
 													<label class="col-sm-2 control-label">Date of Birth</label>
-													<div class="col-sm-10">
-														<p class="form-control-static">20/02/1991</p>
+													<div class="col-sm-3">
+                                                            <div class="input-group date">
+                                                                <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
+                                                                <input id="date_added" type="text" class="form-control" value="03/04/2014">
+                                                            </div>
 													</div>
 												</div>
                                                 <div class="form-group">
 													<label class="col-sm-2 control-label">Language</label>
 													<div class="col-sm-10">
-														<p class="form-control-static">Indonesia</p>
+														<p class="form-control-static"><a href="#" id="Language" data-type="select" data-pk="1" data-title="Enter Language" class="editable editable-click">Indonesia</a></p>
 													</div>
 												</div>
                                                 <div class="form-group">
 													<label class="col-sm-2 control-label">Nationality</label>
 													<div class="col-sm-10">
-														<p class="form-control-static">Indonesia</p>
+														<p class="form-control-static"><a href="#" id="Nationality" data-type="select" data-pk="1" data-title="Enter Nationality" class="editable editable-click">Indonesia</a></p>
 													</div>
 												</div>
 												<div class="form-group">
 													<label class="col-sm-2 control-label">Photo</label>
 													<div class="col-sm-10">
-														<p class="form-control-static"><a>MyPhoto.Jpg</a></p>
+														<p class="form-control-static"><button type="button" class="btn btn-primary btn-xs">Browse</button> <a>MyPhoto.Jpg</a></p>
 													</div>
 												</div>                                                
 												</fieldset>
@@ -272,32 +278,31 @@
 												<div class="form-group">
 													<label class="col-sm-2 control-label">NIP</label>
 													<div class="col-sm-10">
-														<p class="form-control-static">10033</p>
+														<p class="form-control-static"><a href="#" id="NIP" data-type="text" data-pk="1" data-title="Enter NIP" class="editable editable-click">10033</a></p>
 													</div>
 												</div>                                                    
 												<div class="form-group">
 													<label class="col-sm-2 control-label">Job Title</label>
 													<div class="col-sm-10">
-														<p class="form-control-static">IT Developer</p>
+														<p class="form-control-static"><a href="#" id="Job_Title" data-type="select" data-pk="1" data-title="Enter Job Title" class="editable editable-click">IT Developer</a></p>
 													</div>
 												</div>
                                                 <div class="form-group">
 													<label class="col-sm-2 control-label">Organization Unit</label>
 													<div class="col-sm-10">
-														<p class="form-control-static">IT Team</p>
+														<p class="form-control-static"><a href="#" id="Organization_Unit" data-type="select" data-pk="1" data-title="Enter Organization Unit" class="editable editable-click">IT Team</a></p>
 													</div>
 												</div>                                                     
 												<div class="form-group">
 													<label class="col-sm-2 control-label">Employment Type</label>
 													<div class="col-sm-10">
-														<p class="form-control-static">Permanent</p>
+														<p class="form-control-static"><a href="#" id="Employment_Type" data-type="select" data-pk="1" data-title="Enter Employment Type" class="editable editable-click">Permanent</a></p>
 													</div>
 												</div>
-
 												<div class="form-group">
 													<label class="col-sm-2 control-label">Placement</label>
 													<div class="col-sm-10">
-														<p class="form-control-static">DKI Jakarta</p>
+														<p class="form-control-static"><a href="#" id="Placement" data-type="select" data-pk="1" data-title="Enter Placement" class="editable editable-click">DKI Jakarta</a></p>
 													</div>
 												</div>
 												</fieldset>
@@ -493,6 +498,203 @@
 		w3IncludeHTML();
 	</script>
 
+    <!-- X-editable CDN styles -->
+    <script src="js/bootstrap-editable.min.js"></script>
+
+    <-- X-Editable scripts --></-->
+    <script>
+        $(function () {
+
+
+            //turn to inline mode
+            $.fn.editable.defaults.mode = 'inline';
+
+            //defaults
+            $.fn.editable.defaults.url = '#';
+
+            //editables
+            $('#name').editable({
+                url: '#',
+                type: 'text',
+                pk: 1,
+                name: 'name',
+                title: 'Enter name'
+                //contoh validasi
+                //validate: function (value) {if ($.trim(value) == '') return 'This field is required';}
+            });
+
+            //editables
+            $('#City').editable({
+                url: '#',
+                type: 'text',
+                pk: 1,
+                name: 'City',
+                title: 'Enter City'
+                //contoh validasi
+                //validate: function (value) {if ($.trim(value) == '') return 'This field is required';}
+            });
+
+            $('#Title').editable({
+                prepend: "not selected",
+                source: [
+                    {
+                        value: 0,
+                        text: 'Mr'
+                    },
+                    {
+                        value: 1,
+                        text: 'Mrs'
+                    }
+                ]
+            });
+            $('#Gender').editable({
+                prepend: "not selected",
+                source: [
+                    {
+                        value: 0,
+                        text: 'Male'
+                    },
+                    {
+                        value: 1,
+                        text: 'Female'
+                    }
+                ]
+            });
+            $('#Religion').editable({
+                prepend: "not selected",
+                source: [
+                    {
+                        value: 0,
+                        text: 'Moslem'
+                    },
+                    {
+                        value: 1,
+                        text: 'Christian'
+                    }
+                ]
+            });
+             $('#Country').editable({
+                prepend: "not selected",
+                source: [
+                    {
+                        value: 0,
+                        text: 'Indonesia'
+                    },
+                    {
+                        value: 1,
+                        text: 'Malaysia'
+                    },
+                    {
+                        value: 2,
+                        text: 'Other'
+                    }
+                ]
+            });
+             $('#Language').editable({
+                prepend: "not selected",
+                source: [
+                    {
+                        value: 0,
+                        text: 'Indonesia'
+                    },
+                    {
+                        value: 1,
+                        text: 'English'
+                    },
+                    {
+                        value: 2,
+                        text: 'Other'
+                    }
+                ]
+            });    
+             $('#Nationality').editable({
+                prepend: "not selected",
+                source: [
+                    {
+                        value: 0,
+                        text: 'Indonesia'
+                    },
+                    {
+                        value: 1,
+                        text: 'English'
+                    },
+                    {
+                        value: 2,
+                        text: 'Other'
+                    }
+                ]
+            });    
+             $('#Job_Title').editable({
+                prepend: "not selected",
+                source: [
+                    {
+                        value: 0,
+                        text: 'IT Developer'
+                    },
+                    {
+                        value: 1,
+                        text: 'Finance Staff'
+                    },
+                    {
+                        value: 2,
+                        text: 'HC Staff'
+                    }
+                ]
+            });        
+             $('#Orgazanition_Unit').editable({
+                prepend: "not selected",
+                source: [
+                    {
+                        value: 0,
+                        text: 'IT Team'
+                    },
+                    {
+                        value: 1,
+                        text: 'Finance Team'
+                    },
+                    {
+                        value: 2,
+                        text: 'HC Team'
+                    }
+                ]
+            });        
+             $('#Employment_Type').editable({
+                prepend: "not selected",
+                source: [
+                    {
+                        value: 0,
+                        text: 'Permanent'
+                    },
+                    {
+                        value: 1,
+                        text: 'Contract'
+                    }
+                ]
+            });             
+             $('#Placement').editable({
+                prepend: "not selected",
+                source: [
+                    {
+                        value: 0,
+                        text: 'DKI Jakarta'
+                    },
+                    {
+                        value: 1,
+                        text: 'Bandung'
+                    }
+                ]
+            });              
+            //editables
+            $('#NIP').editable({
+                url: '#',
+                type: 'text',
+                pk: 1,
+                name: 'name',
+                title: 'Enter name'
+                //contoh validasi
+                //validate: function (value) {if ($.trim(value) == '') return 'This field is required';}
+            });        });
+    </script>
 
 </body>
 
